fix the offers and medicions sections
